Render books from the library

--- a/css/style.css
+++ b/css/style.css
@@ -33,8 +33,13 @@ body {
 }
 
 .card {
-	background-color: hsl(225deg 4% 20%);
+	padding: 0.5em;
 	box-shadow: 0 0 2px 1px hsl(0deg 3% 93%);
 	border-radius: 0.25em;
-	padding: 0.5em;
+	background-color: hsl(225deg 4% 20%);
+	cursor: pointer;
+}
+
+.card:hover {
+	background-color: hsl(225deg 4% 20% / 25%);
 }
