--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,7 @@ body {
 	max-width: 1280px;
 	margin: 0 auto;
 	display: flow-root;
+	perspective: 1000px;
 }
 
 .header {
@@ -31,6 +32,7 @@ body {
 	grid-gap: 1em;
 	grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
 	grid-auto-rows: 1fr;
+	margin-bottom: 5em;
 }
 
 .card {
@@ -51,6 +53,7 @@ body {
 	font-weight: bold;
 	color: hsl(217deg 89% 76%);
 	margin-bottom: 0.25em;
+	border-bottom: 1px solid hsl(230deg 3% 45%);
 }
 
 .card__author {
@@ -60,6 +63,27 @@ body {
 
 .bottom-container {
 	margin-top: auto;
+}
+
+.new-book {
+	font-family: "Open Sans";
+	display: block;
+	background-color: hsl(217deg 21% 41%);
+	color: hsl(217deg 100% 91%);
+	border-radius: 0.15em;
+	padding: 0.5em 2em;
+	margin: 0 auto;
+	cursor: pointer;
+	text-transform: uppercase;
+	box-shadow: 0 0 2px 1px #8bb5f8;
+}
+
+.new-book:hover {
+	background-color: hsl(217deg 21% 41% / 49%);
+}
+
+.new-book:active {
+	box-shadow: 0 0 2px 1px #8bb5f8 inset;
 }
 
 .form {
@@ -114,4 +138,16 @@ body {
 	display: flex;
 	flex-direction: column;
 	gap: 0.25em;
+}
+
+.form-pre-animation {
+	transform-origin: left;
+	transform: rotateY(90deg) translateX(600px);
+	opacity: 0;
+	transition: all 0.5s;
+}
+
+.form-animation {
+	transform: rotateY(0deg) translatex(0px);
+	opacity: 1;
 }
