--- a/css/style.css
+++ b/css/style.css
@@ -121,7 +121,7 @@ body {
 	grid-template-rows: 50px repeat(4, 1fr) 50px;
 	row-gap: 1.5em;
 	font-family: "Open Sans", sans-serif;
-	margin: 5em auto;
+	margin: 2em auto;
 	padding: 1em;
 	background-color: hsl(0deg 0% 5% / 75%);
 	box-shadow: 0 0 4px 2px #000;
@@ -213,4 +213,18 @@ body {
 .form-animation {
 	transform: rotateY(0deg) translatex(0px);
 	opacity: 1;
+}
+
+.flex-container {
+	font-size: 1.5rem;
+	font-family: "Open Sans", sans-serif;
+	display: flex;
+	margin: 0 auto;
+	width: fit-content;
+	gap: 0.5em;
+}
+
+.github-icon {
+	display: grid;
+	cursor: pointer;
 }
